--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <hr>
     <div class="row">
       <div class="col-xs-6">
-        <h1>John Doe</h1>
+        <h1>Charles Zwicker</h1>
       </div>
       <div class="col-xs-6">
         <p class="text-right"><a href="">Download my Resume <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span></a></p>
@@ -34,17 +34,14 @@
         <div class="media">
           <div class="media-left"> <a href="#"> <img class="media-object img-rounded" src="images/115X115.gif" alt="..."> </a> </div>
           <div class="media-body">
-            <h2 class="media-heading">Web Developer</h2>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, neque, in, accusamus optio architecto debitis dolor animi placeat ut ab corporis laboriosam itaque. Nobis, sapiente quo dolorum ut quod possimus doloremque suscipit ad doloribus quam dolor </div>
+            <h2 class="media-heading">Student</h2>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, neque, in, accusamus optio architecto debitis dolor animi placeat ut ab corporis laboriosam itaque. Nobis, sapiente quo dolorum ut quod possimus doloremque suscipit ad doloribus quam dolor </div>
         </div>
       </div>
       <div class="col-xs-5 well">
         <div class="row">
           <div class="col-lg-6">
-            <h4><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> : 123-456-7890</h4>
-          </div>
-          <div class="col-lg-6">
-            <h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> : john@example.com</h4>
+            <h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> : <a href="mailto:me@charleszwicker.com" target="_top">Send Me an Email</a></h4>
           </div>
         </div>
         <div class="row">
@@ -63,19 +60,21 @@
         <h2>Education</h2>
         <hr>
         <div class="row">
-        	<div class="col-xs-6"><h4>College of Web Design</h4></div>
         	<div class="col-xs-6">
-        	  <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Jan 2002 - Dec 2006</h4>
+        	  <h4>Stevens Institute of Technology</h4>
+        	</div>
+        	<div class="col-xs-6">
+        	  <h4> August 2016 - Present</h4>
         	</div>
         </div>
         <h4><span class="label label-default">Bachelors</span></h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
         <div class="row">
           <div class="col-xs-6">
-            <h4>University of Web Design</h4>
+            <h4>La Salle College High School</h4>
           </div>
           <div class="col-xs-6">
-            <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Jan 2006 - Dec 2008</h4>
+            <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> September 2012 - June 2016</h4>
           </div>
         </div>
         <h4><span class="label label-default">Masters</span></h4>
@@ -118,13 +117,13 @@
       <div class="col-lg-6">
         <div class="row">
           <div class="col-xs-5">
-            <h4>ABC Corp.</h4>
+            <h4>Stevens Institute of Technology</h4>
           </div>
 <div class="col-xs-5">
-            <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Jan 2002 - Dec 2006</h4>
-          </div>
+  <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> September 2016 - Present</h4>
+</div>
         </div>
-        <h4><span class="label label-default">Web Developer</span></h4>
+        <h4><span class="label label-default">User Support Specialist</span></h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
         <ul>
         	<li>Lorem ipsum dolor sit amet.</li>
@@ -135,13 +134,13 @@
       <div class="col-lg-6">
         <div class="row">
           <div class="col-xs-5">
-            <h4>XYZ Corp.</h4>
+            <h4>La Salle College High School</h4>
           </div>
           <div class="col-xs-6">
-            <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Jan 2002 - Dec 2006</h4>
+            <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> June 2012 - August 2016</h4>
           </div>
         </div>
-        <h4><span class="label label-default">Senior Web Developer</span></h4>
+        <h4>&nbsp;<span class="label label-default">Systems Administrator</span></h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
         <ul>
           <li>Lorem ipsum dolor sit amet.</li>
