--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, neque, in, ac
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> : San Francisco, CA</h4>
+            <h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> : Fort Washington, PA</h4>
           </div>
           <div class="col-lg-6">
-            <h4><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> : 123-456-7890</h4>
+            <h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> : Hoboken, NJ</h4>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, neque, in, ac
             <h4 class="text-right"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> September 2012 - June 2016</h4>
           </div>
         </div>
-        <h4><span class="label label-default">Masters</span></h4>
+        <h4><span class="label label-default">High School</span></h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
 </div>
       <div class="col-sm-4 col-lg-5">
