--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Alan Doe</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+              <h1 class="name">Charles Zwicker</h1>
+                <h3 class="tagline">Computer Engineering Student</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">alan.doe@website.com</a></li>
-                    <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li>
+                  <li class="email"><em class="fa fa-envelope"></em><a href="mailto: me@charleszwicker.com">me@charleszwicker.com</a></li>
+                  <li class="phone"><i class="fa fa-phone"></i><a href="tel:2677460055">(267)-746-0055</a></li>
                     <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li>
