--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
-            </div>
+                <a class="navbar-brand" href="#page-top">Charles Zwicker</a></div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -72,11 +71,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
-                    <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
-                        <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
-                    </div>
+                    <div class="intro-text">Charles Zwicker
+                      <hr class="star-light">
+                      <span class="skills">Student - Computer Engineer - Systems Administrator</span></div>
                 </div>
             </div>
         </div>
