--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
-                    <div class="intro-text">Charles Zwicker
+                    <div class="intro-text"><span class="name">Charles Zwicker</span>
                       <hr class="star-light">
                       <span class="skills">Student - Computer Engineer - Systems Administrator</span></div>
                 </div>
