Changed download back

--- a/download/index.html
+++ b/download/index.html
@@ -1,2 +1,1 @@
-<iframe src="https://otos.feralhosting.com/czwicker/rutorrent/" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" >
-    </iframe>
+<meta http-equiv="refresh" content="0; url=	https://otos.feralhosting.com/czwicker/rutorrent/" />
